# Thesis_code

./: README.md
Deepov-wasm/: Deepov  Deepov.wasm  Deepov.wat  DeepovTesting  Deepov_final.wasm  Deepov_final2.wasm  Deepov_final_F.wasm  Deepov_final_F.wat  Deepovtree.wat  compare1.wat  compare2.wat  makefile  makefile.save  makefile2  testsetup.wat  trimmed.wat
Deepov-wasm/src/: BitBoardUtils.cpp  BitBoardUtils.hpp  Board.cpp  Board.hpp  MagicMoves.hpp  Main.cpp  Move.cpp  Move.hpp  Pawn.hpp  Search.cpp  Search.hpp  TT.cpp  TT.hpp  TTEntry.hpp  TimeManager.hpp  Utils.cpp  Utils.hpp
Deepov-wasm/temp/: Uci.cpp  Uci.hpp
Deepov-wasm/testcomp/: a.out  test.wasm  test.wat  testfunc.cpp  testfunc.h  testmain.cpp
Enclave_browser_extension/: bg.js  com.mark.wasm_enclave.json  manifest.json
attestation_server/: GeneralSettings.h  client.crt  client.key  client.p12  client.pem  server.key
attestation_server/Networking/: AbstractNetworkOps.cpp  AbstractNetworkOps.h  Server.cpp  Server.h  Session.cpp  Session.h
attestation_server/ServiceProvider/: Makefile
attestation_server/WebService/: WebService.cpp
chess_webapp/: app.py  samplelibcrypto.py
chess_webapp/templates/: factorial.html  index.html
thesisbenchmark/: 2mm.wast  benchmark.py  boxplot.py  deepov.wast
thesisbenchmark/data/: enclave_startup.txt  test.bench  (+14 more)
wasmi-enclave/: Makefile  deepov_test.msg  f64_test.msg  fac_test.msg  server.crt  stockfish_test.msg
wasmi-enclave/app/: Cargo.toml  build.rs
wasmi-enclave/app/src/: Messages.rs  enclave.rs  main.rs  message_client.rs  tcp_client.rs
(+18 files in other folders)
