[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
wabt = "0.6.0"
serde = {version = "1.0"}
serde_json = {version = "1.0"}
serde_derive = {version = "1.0"}
serde_bytes = "0.11.3"
dirs = "1.0.2"
nan-preserving-float = "0.1.0"
chrome_native_messaging = "0.1.2"
protobuf = "2.10.1"
bytebuffer = "0.2.1"
base64 = "0.12.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }
